2013-12-21	Stephan Linz <linz@li-pro.net>

	* common: install optimized libraries from mutilib toolchain
		  overlay install make rules from ptxdist-2012.10.0

2013-12-19	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add reference note to the right GNU toolchain
	* common: HOWTO: add BSP status: known issues
	* ptxconfig: prepare mbref-uio-trunk for kernel 3.8

2013-12-17	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to u-boot-2013.10

2013-12-16	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.8.11

2013-12-13	Stephan Linz <linz@li-pro.net>

	* common: upgarde patch sets to linux-3.8.11 based on petalinux-v2013.10
	* common: upgarde patch sets to u-boot-2013.10
	* common: change URL in host-dtc to get latest dtc-1.4.0 from dev.gentoo
	* platforms: fix cross compile prefix for AXI
	* platforms: u-boot v2013.04 needs host side dtc

2013-12-11	Stephan Linz <linz@li-pro.net>

	* common: fix util-linux 2.21.2 to build for microblaze
	* common: fix dbus 1.6.4 to build with latest glibc
		  fix default version from global ptxdist rule set
	* ptxconfig: adapt latest Kconfig version from ptxdist
	* ptxconfig: disable mdev, enable udev
	* ptxconfig: set BSP verndor and version number

2013-12-03	Stephan Linz <linz@li-pro.net>

	* common: dbus: (re-)enable default rule for 1.6.4
	* common: glib: (re-)enable default rule for 2.32.3
	* common: glibmm: (re-)enable default rule for 2.30.1
	* common: upgrade to libffi-3.0.13
	* ptxconfig: disable ipkg
	* collection: startup: resort base image content
	* common: use startup collection in build_all.mk make script

2013-12-02	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: add reference note to the right GNU toolchain

2013-11-30	Stephan Linz <linz@li-pro.net>

	* ptxconfig: host-xl-tools: version bump 1.1.0 -> 1.1.1

2013-11-29	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-3.6
	* common: adapt latest patch sets to u-boot-2013.04