@@ -72,6 +72,7 @@ PTXCONF__ptxconfig_MAGIC__=y
 PTXCONF_HOST_PACKAGE_MANAGEMENT_IPKG=y
 # PTXCONF_HOST_PACKAGE_MANAGEMENT_OPKG is not set
 PTXCONF_HOST_PACKAGE_MANAGEMENT="ipkg"
+PTXCONF_HOST_QEMU=y
 # PTXCONF_HOST_TESTFRAMEWORK is not set
 PTXCONF_HOST_ACL=y
 # PTXCONF_HOST_APACHE2 is not set
@@ -102,9 +103,9 @@ PTXCONF_HOST_FIGLET=y
 # PTXCONF_HOST_GENEXT2FS is not set
 # PTXCONF_HOST_GENIMAGE is not set
 # PTXCONF_HOST_GENPART is not set
-PTXCONF_HOST_GETTEXT_DUMMY=m
+PTXCONF_HOST_GETTEXT_DUMMY=y
 # PTXCONF_HOST_GETTEXT is not set
-PTXCONF_HOST_GLIB=m
+PTXCONF_HOST_GLIB=y
 # PTXCONF_HOST_GPERF is not set
 PTXCONF_HOST_GTK_DOC=m
 # PTXCONF_HOST_INTLTOOL is not set
@@ -114,9 +115,9 @@ PTXCONF_HOST_IPKG=y
 # PTXCONF_HOST_LIBBZ2 is not set
 # PTXCONF_HOST_LIBCAP is not set
 # PTXCONF_HOST_LIBCONFUSE is not set
-PTXCONF_HOST_LIBFFI=m
+PTXCONF_HOST_LIBFFI=y
 # PTXCONF_HOST_LIBGD is not set
-PTXCONF_HOST_LIBICONV=m
+PTXCONF_HOST_LIBICONV=y
 # PTXCONF_HOST_LIBLZO is not set
 # PTXCONF_HOST_LIBPNG is not set
 # PTXCONF_HOST_LIBPTHREAD_STUBS is not set
@@ -172,7 +173,7 @@ PTXCONF_HOST_XORG_PROTO_X=y
 # PTXCONF_HOST_XORG_UTIL_MACROS is not set
 # PTXCONF_HOST_XZ is not set
 # PTXCONF_HOST_YASM is not set
-PTXCONF_HOST_ZLIB=m
+PTXCONF_HOST_ZLIB=y
 
 #
 # Cross Tools                   
