@@ -1,3 +1,7 @@
+2013-12-24	Stephan Linz <linz@li-pro.net>
+
+	* common: add basic Qemu support (build and start)
+
 2013-12-21	Stephan Linz <linz@li-pro.net>
 
 	* common: install optimized libraries from mutilib toolchain
